--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,10 +1,23 @@
 {
+    "short_name": "Todo App",
     "name": "Todo App",
+    "description": "Todo App to track our daily activities",
     "icons": [
         {
             "src": "/images/logo.png",
             "type": "image/png",
-            "sizes": "512x512"
+            "sizes": "512x512",
+            "purpose": "any"
+        },
+        {
+            "src": "/images/logo2.png",
+            "type": "image/png",
+            "sizes": "128x128"
+        },
+        {
+            "src": "/images/logo3.png",
+            "type": "image/png",
+            "sizes": "64x64"
         }
     ],
     "start_url": ".",
